--- a/index.html
+++ b/index.html
@@ -51,18 +51,6 @@
   </div>
 </section>
 
-<!-- ADDED: WHO THIS IS FOR (insert only) -->
-<section class="who-for">
-  <h2>Care Mobility is ideal for:</h2>
-  <ul>
-    <li>Dialysis patients with recurring weekly appointments</li>
-    <li>Seniors attending therapy, radiation, or infusion care</li>
-    <li>Families coordinating transportation for a loved one</li>
-    <li>Home-based care providers supporting ongoing treatment</li>
-  </ul>
-</section>
-<!-- /ADDED -->
-
 <!-- SERVICES -->
 <section class="services">
   <h2>
@@ -124,33 +112,42 @@
 
 <!-- ADDED: HOW IT WORKS (insert only) -->
 <section class="how-it-works">
-  <h2>How Care Mobility Works</h2>
-
+  <h2 class="section-title-blue">How Care Mobility Works</h2>
   <div class="how-steps">
-    <div class="how-step">
-      <strong>1. Set a recurring schedule</strong>
-      <p>
-        We coordinate consistent pickup and return times based on your
-        treatment schedule — not day-to-day ride requests.
-      </p>
-    </div>
 
-    <div class="how-step">
-      <strong>2. Same routine, familiar drivers</strong>
-      <p>
-        Predictable timing and familiar faces reduce anxiety for patients
-        and caregivers.
-      </p>
-    </div>
-
-    <div class="how-step">
-      <strong>3. Reliable rides, week after week</strong>
-      <p>
-        No approvals. No insurance delays. Just dependable transportation
-        that stays consistent over time.
-      </p>
-    </div>
+  <div class="how-step">
+    <strong>1. Meet your driver</strong>
+    <p>
+      Patients are matched with a familiar driver who understands their
+      routine, schedule, and comfort needs.
+    </p>
   </div>
+
+  <div class="how-step">
+    <strong>2. Set a recurring schedule</strong>
+    <p>
+      We coordinate consistent pickup and return times based on your
+      treatment schedule — not day-to-day ride requests.
+    </p>
+  </div>
+
+  <div class="how-step">
+    <strong>3. Same routine, familiar drivers</strong>
+    <p>
+      Predictable timing and familiar faces reduce anxiety for patients
+      and caregivers.
+    </p>
+  </div>
+
+  <div class="how-step">
+    <strong>4. Reliable rides, week after week</strong>
+    <p>
+      No approvals. No insurance delays. Just dependable transportation
+      that stays consistent over time.
+    </p>
+  </div>
+</div>
+
 </section>
 <!-- /ADDED -->
 
