--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
       Transportation you can count on — every appointment, every week.
     </p>
 
+    <!-- ADDED: HERO CTA BUTTONS (insert only) -->
     <div class="hero-actions">
-      <a href="#schedule" class="primary-cta">Check Availability</a>
+      <a href="#form" class="primary-cta">Check Availability</a>
       <a href="#faq" class="secondary-cta">See FAQs ↓</a>
     </div>
+    <!-- /ADDED -->
   </div>
 
   <div class="hero-image">
@@ -63,27 +65,50 @@
   <div class="service-grid">
     <div class="service-card">
       <strong>🩺 Dialysis</strong>
-      <p>Multiple weekly treatments depend on precise timing.</p>
+      <p>
+        Multiple weekly treatments depend on precise timing. Care Mobility ensures
+        dependable pickups so patients arrive consistently, on schedule, and without stress.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>💉 Cancer & Infusion Therapy</strong>
-      <p>Reliable transportation over extended treatment periods.</p>
+      <p>
+        Ongoing treatments often take place at the same center over extended periods.
+        Care Mobility provides familiar, reliable transportation that supports continuity of care.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>♿ Rehabilitation & Therapy</strong>
-      <p>Consistency that supports recovery plans.</p>
+      <p>
+        Physical, occupational, and specialty therapies require repeat visits week after week.
+        Care Mobility helps patients stay consistent with their recovery plan.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>☢️ Radiation Therapy</strong>
-      <p>Tightly scheduled daily treatment windows.</p>
+      <p>
+        Radiation treatments follow tightly scheduled daily windows.
+        Care Mobility helps prevent missed or delayed appointments that could disrupt care.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>🤝 Substance Use Treatment</strong>
-      <p>Structured outpatient program support.</p>
+      <p>
+        Outpatient programs rely on structure and routine to be effective.
+        Care Mobility provides consistent transportation that supports accountability and continuity.
+      </p>
     </div>
+
     <div class="service-card">
       <strong>🏥 Post-Op Rehab</strong>
-      <p>Predictable rides during limited mobility.</p>
+      <p>
+        Recovery often requires repeat visits to the same facility while mobility is limited.
+        Care Mobility offers predictable rides that support healing and independence.
+      </p>
     </div>
   </div>
 </section>
@@ -91,78 +116,321 @@
 <!-- HOW IT WORKS -->
 <section class="how-it-works">
   <h2 class="section-title-blue">How Care Mobility Works</h2>
+
   <div class="how-steps">
+
     <div class="how-step">
-      <strong>1. Meet your driver</strong>
-      <p>Patients are matched with a familiar driver.</p>
+      <strong>1. Share your schedule</strong>
+      <p>
+        Tell us where you need to go and how often.
+        There are no approvals, eligibility checks, or paperwork required.
+      </p>
     </div>
+
     <div class="how-step">
-      <strong>2. Set a recurring schedule</strong>
-      <p>Consistent pickup and return times.</p>
+      <strong>2. Meet your driver</strong>
+      <p>
+        Patients are matched with a familiar, trusted driver who understands
+        their routine, preferences, and comfort needs.
+      </p>
     </div>
+
     <div class="how-step">
-      <strong>3. Same routine, familiar drivers</strong>
-      <p>Reduced anxiety and dependable care.</p>
+      <strong>3. Set it once</strong>
+      <p>
+        We lock in consistent pickup and return times based on your treatment
+        schedule — not day-to-day ride requests.
+      </p>
     </div>
+
+    <div class="how-step">
+      <strong>4. Just show up</strong>
+      <p>
+        The same routine, familiar drivers, and predictable timing reduce
+        anxiety and make recurring care feel effortless.
+      </p>
+    </div>
+
   </div>
 </section>
 
 <!-- SIMPLER ALTERNATIVE -->
 <section class="alt-module">
   <div class="alt-container alt-split">
+
     <div class="alt-text alt-flat">
       <h2>A Simpler Alternative to Insurance-Based Medical Transportation</h2>
+
       <ul class="alt-bullets flat">
-        <li><strong>Insurance-based transportation adds friction.</strong></li>
-        <li><strong>Delays hurt patients with recurring care.</strong></li>
-        <li><strong>No Medicare, Medicaid, or insurance approvals.</strong></li>
-        <li><strong>Transparent pricing.</strong></li>
-        <li><strong>No middle layers.</strong></li>
+        <li>
+          <strong>Insurance-based transportation adds friction.</strong>
+          Don't depend on Medicare, Medicaid, or insurance approvals,
+          that require paperwork, eligibility checks, and authorization workflows
+          before rides can even be scheduled.
+        </li>
+
+        <li>
+          <strong>Delays hurt patients with recurring care.</strong>
+          For patients who need rides multiple times each week, insurance,
+          Medicare, and Medicaid processes often introduce delays, missed
+          appointments, and unnecessary stress.
+        </li>
+
+        <li>
+          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance.</strong>
+          We operate independently of insurance networks, care advocates,
+          and authorization requirements.
+        </li>
+
+        <li>
+          <strong>Technology-driven efficiency keeps pricing low for you.</strong>
+          By using sophisticated routing, scheduling, and customer experience
+          technology, Care Mobility operates efficiently and offers clear,
+          predictable pricing without insurance complexity.
+        </li>
+
+        <li>
+          <strong>No approvals. No middle layers.</strong>
+          Just reliable, recurring transportation that starts quickly and
+          stays consistent — week after week.
+        </li>
       </ul>
     </div>
+
     <div class="alt-images">
-      <img src="assets/senior-driver-assist.jpg" alt="">
-      <img src="assets/senior-arrival-medical.jpg" alt="">
-      <img src="assets/senior-assist.jpg" alt="">
+      <img src="assets/senior-driver-assist.jpg" alt="Driver assisting senior into vehicle" />
+      <img src="assets/senior-arrival-medical.jpg" alt="Senior arriving calmly at medical appointment" />
+      <img src="assets/senior-assist.jpg" alt="Senior assisted into vehicle at home" />
     </div>
   </div>
 </section>
 
-<!-- VEHICLE TYPES -->
+<!-- MODULE: VEHICLE TYPES & EXTENDED SERVICES -->
 <section class="alt-module light">
   <div class="alt-container alt-split">
+
+    <!-- LEFT: IMAGES -->
     <div class="alt-images">
-      <img src="assets/sedan-assisted-entry.jpg" alt="">
-      <img src="assets/wheelchair-transport-van.jpg" alt="">
-      <img src="assets/senior-post-appointment.jpg" alt="">
+      <img src="assets/sedan-assisted-entry.jpg"
+           alt="Driver assisting senior out of vehicle" />
+
+      <img src="assets/wheelchair-transport-van.jpg"
+           alt="Wheelchair accessible medical transport van" />
+
+      <img src="assets/senior-post-appointment.jpg"
+           alt="Senior leaving medical appointment with caregiver" />
     </div>
+
+    <!-- RIGHT: COPY -->
     <div class="alt-text">
       <h2>Ambulatory & Wheelchair-Accessible Transportation</h2>
+
       <ul class="alt-bullets">
-        <li><strong>Ambulatory transportation</strong></li>
-        <li><strong>Wheelchair-accessible vans</strong></li>
-        <li><strong>Wait-and-return service</strong></li>
-        <li><strong>Errands and pharmacy stops</strong></li>
-        <li><strong>Flexible as needs change</strong></li>
+        <li>
+          <strong>Ambulatory transportation</strong>
+          For patients who can walk independently or with minimal assistance,
+          with calm, assisted entry and exit when needed.
+        </li>
+
+        <li>
+          <strong>Wheelchair-accessible vans</strong>
+          Secure wheelchair transport with assisted boarding, securement,
+          and comfortable arrival at medical facilities.
+        </li>
+
+        <li>
+          <strong>Exclusive wait-and-return service</strong>
+          Drivers can remain on-site during treatments and return patients
+          home immediately once appointments are completed — eliminating
+          long waits, secondary pickups, or ride uncertainty.
+        </li>
+
+        <li>
+          <strong>Support beyond the appointment</strong>
+          Transportation can include pharmacy stops, lab visits, medical
+          supply pickup, or other essential senior errands tied to care days.
+        </li>
+
+        <li>
+          <strong>Flexible as needs change</strong>
+          Transition easily between ambulatory and wheelchair service, add
+          wait time, or include errands — without re-enrollment, approvals,
+          or administrative delays.
+        </li>
       </ul>
+    </div>
+
+  </div>
+</section>
+
+<!-- CARE MOBILITY DIFFERENCE -->
+<section class="alt-module why-narrative">
+  <div class="alt-split">
+
+    <!-- LEFT: COPY -->
+    <div class="alt-text">
+      <h2>Why I started Care Mobility</h2>
+
+      <p>
+        Care Mobility was created to meet a real need in healthcare:
+        dependable medical transportation for seniors who want to stay
+        independent — without placing extra burden on family or loved ones.
+      </p>
+
+      <p>
+        Too often, existing options create tradeoffs. Seniors face unreliable
+        pickups, families scramble to adjust schedules, and stress builds
+        around making sure care isn’t missed.
+      </p>
+
+      <p>
+        We prioritize quality of service first: predictable pickup times,
+        familiar drivers, calm assistance, and consistent routines that work
+        week after week.
+      </p>
+
+      <p>
+        By operating independently and using modern routing and scheduling
+        technology, Care Mobility delivers reliable service at a fair,
+        transparent price that’s often faster and simpler than traditional
+        alternatives.
+      </p>
+
+      <p class="why-emphasis">
+        Care Mobility isn’t just about rides.
+        It’s about independence, reliability, and making recurring medical
+        care easier for everyone involved.
+      </p>
+    </div>
+
+    <!-- RIGHT: BRAND IMAGE -->
+    <div class="alt-images">
+      <img
+        src="assets/care-mobility-difference.png"
+        alt="The Care Mobility Difference – Reliable care. Real independence."
+      />
+    </div>
+
+  </div>
+</section>
+
+<!-- ADDED: FAQ ANCHOR TARGET (insert only) -->
+<div id="faq"></div>
+<!-- /ADDED -->
+
+<!-- FAQ -->
+<section class="faq faq-contrast">
+  <div class="faq-inner">
+
+    <h2>Frequently Asked Questions About Care Mobility</h2>
+
+    <div class="faq-list">
+
+      <div class="faq-item">
+        <h3>Is Care Mobility covered by Medicare, Medicaid, or insurance?</h3>
+        <p>
+          Care Mobility is a private-pay service and does not bill Medicare,
+          Medicaid, or insurance. This allows us to avoid approvals,
+          paperwork, and delays that often interfere with recurring
+          medical care and a compelling price to you.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Why would I pay out of pocket for medical transportation?</h3>
+        <p>
+          Because getting to care on time cannot be compromised. For
+          recurring treatments like dialysis, radiation, or therapy,
+          missed or delayed rides can disrupt care plans, increase
+          health risks, and create unnecessary stress.
+        </p>
+        <p>
+          Care Mobility is designed to prioritize consistency and
+          reliability over administrative processing, which reduces 
+          our costs and improves your experience.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Isn’t insurance-based transportation cheaper?</h3>
+        <p>
+          Insurance-based transportation often appears cheaper, but the
+          real cost shows up in delays, missed pickups, rescheduling,
+          and time lost. Many families end up paying with frustration.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>How does Care Mobility keep pricing reasonable?</h3>
+        <p>
+          Care Mobility uses advanced routing, scheduling, and customer
+          experience technology to operate efficiently. By eliminating
+          insurance processing and administrative overhead, we keep
+          pricing transparent and predictable while delivering reliable
+          service.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Who typically chooses Care Mobility?</h3>
+        <p>
+          Care Mobility is most often chosen by seniors, adult children,
+          and caregivers who value reliability and consistency for
+          recurring medical care and cannot risk missed or delayed
+          appointments.
+        </p>
+      </div>
+
     </div>
   </div>
 </section>
 
-<!-- FAQ -->
-<div id="faq"></div>
+<!-- WHY THESE 4 STEPS WORK -->
+<section class="how-comparison">
+  <h3>Why It's Better</h3>
 
-<section class="faq faq-contrast">
-  <div class="faq-inner">
-    <h2>Frequently Asked Questions About Care Mobility</h2>
-    <!-- FAQ content unchanged -->
-  </div>
+  <table class="comparison-table">
+    <thead>
+      <tr>
+        <th>Insurance-Based Transportation</th>
+        <th>Care Mobility</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Eligibility checks</td>
+        <td>One simple setup</td>
+      </tr>
+      <tr>
+        <td>Re-authorizations</td>
+        <td>Set once</td>
+      </tr>
+      <tr>
+        <td>Different drivers each ride</td>
+        <td>Familiar faces</td>
+      </tr>
+      <tr>
+        <td>Rebooking every appointment</td>
+        <td>Just show up</td>
+      </tr>
+    </tbody>
+  </table>
 </section>
 
 <!-- QUOTES -->
 <section class="quote">
   <blockquote>
-    “Reliable transportation is critical to the care we provide…”
+    “Reliable transportation is critical to the care we provide. Care Mobility
+    has been a trusted partner for our clients who need recurring medical
+    appointments. Their consistency, predictable scheduling, and familiar
+    drivers make a real difference for both patients and caregivers.”
+    <span>— Director, Home-Based Care Services</span>
+  </blockquote>
+
+  <blockquote class="secondary-quote">
+    “Care Mobility allows our care teams to focus on the patient — not whether
+    transportation will show up. That reliability is invaluable in home-based care.”
+    <span>— Operations Manager, Major Dialysis Center</span>
   </blockquote>
 </section>
 
@@ -174,13 +442,12 @@
     <h2>Schedule recurring transportation</h2>
     <p>
       Choose a time to discuss recurring medical transportation needs.
-      Please do not include medical diagnoses or PHI.
+      Please do not include medical diagnoses or protected health information (PHI).
     </p>
 
-    <!-- Calendly inline embed -->
     <div
       class="calendly-inline-widget"
-      data-url="https://calendly.com/YOUR-CALENDLY-LINK"
+      data-url="https://calendly.com/caremobility247"
       style="min-width:320px;height:750px;">
     </div>
   </div>
