--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
       Transportation you can count on — every appointment, every week.
     </p>
 
-    <!-- ADDED: HERO CTA BUTTONS (insert only) -->
     <div class="hero-actions">
-      <a href="#form" class="primary-cta">Check Availability</a>
+      <a href="#schedule" class="primary-cta">Check Availability</a>
       <a href="#faq" class="secondary-cta">See FAQs ↓</a>
     </div>
-    <!-- /ADDED -->
   </div>
 
   <div class="hero-image">
@@ -113,6 +111,7 @@
   </div>
 </section>
 
+
 <!-- HOW IT WORKS -->
 <section class="how-it-works">
   <h2 class="section-title-blue">How Care Mobility Works</h2>
@@ -120,7 +119,7 @@
   <div class="how-steps">
 
     <div class="how-step">
-      <strong>1. Share your schedule</strong>
+      <strong>1. Sign up, share your schedule</strong>
       <p>
         Tell us where you need to go and how often.
         There are no approvals, eligibility checks, or paperwork required.
@@ -128,7 +127,7 @@
     </div>
 
     <div class="how-step">
-      <strong>2. Meet your driver</strong>
+      <strong>2. Meet your driver, choose your vehicle</strong>
       <p>
         Patients are matched with a familiar, trusted driver who understands
         their routine, preferences, and comfort needs.
@@ -136,7 +135,7 @@
     </div>
 
     <div class="how-step">
-      <strong>3. Set it once</strong>
+      <strong>3. Set it once, just show up</strong>
       <p>
         We lock in consistent pickup and return times based on your treatment
         schedule — not day-to-day ride requests.
@@ -144,10 +143,25 @@
     </div>
 
     <div class="how-step">
-      <strong>4. Just show up</strong>
+      <strong>4. Enjoy and smile the way there and back</strong>
       <p>
-        The same routine, familiar drivers, and predictable timing reduce
-        anxiety and make recurring care feel effortless.
+        Drivers provide calm, patient-first assistance with entry, exit,
+        and any mobility needs — ensuring a smooth, comfortable experience.
+      </p>
+    
+    <div class="how-step">
+      <strong>5. See you again</strong>
+      <p>
+        Your next ride is already taken care of — no daily coordination,
+        no reauthorizations, and no insurance or Medicare paperwork to redo.
+      </p>
+    </div>
+
+    <div class="how-step">
+      <strong>6. Adjust as care evolves</strong>
+      <p>
+        If treatment plans change, simply call or email us.
+        We’ll update your schedule without re-enrollment or administrative delays.
       </p>
     </div>
 
@@ -385,37 +399,6 @@
   </div>
 </section>
 
-<!-- WHY THESE 4 STEPS WORK -->
-<section class="how-comparison">
-  <h3>Why It's Better</h3>
-
-  <table class="comparison-table">
-    <thead>
-      <tr>
-        <th>Insurance-Based Transportation</th>
-        <th>Care Mobility</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Eligibility checks</td>
-        <td>One simple setup</td>
-      </tr>
-      <tr>
-        <td>Re-authorizations</td>
-        <td>Set once</td>
-      </tr>
-      <tr>
-        <td>Different drivers each ride</td>
-        <td>Familiar faces</td>
-      </tr>
-      <tr>
-        <td>Rebooking every appointment</td>
-        <td>Just show up</td>
-      </tr>
-    </tbody>
-  </table>
-</section>
 
 <!-- QUOTES -->
 <section class="quote">
