--- a/index.html
+++ b/index.html
@@ -116,10 +116,18 @@
 <section class="how-it-works">
   <h2 class="section-title-blue">How Care Mobility Works</h2>
 
-  <div class="how-steps">
+  <div class="how-steps-grid">
 
     <div class="how-step">
-      <strong>1. Sign up, share your schedule</strong>
+      <div class="how-icon">
+        <!-- calendar -->
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <rect x="3" y="4" width="18" height="18" rx="2"/>
+          <line x1="16" y1="2" x2="16" y2="6"/>
+          <line x1="8" y1="2" x2="8" y2="6"/>
+        </svg>
+      </div>
+      <strong>1. Share your schedule</strong>
       <p>
         Tell us where you need to go and how often.
         There are no approvals, eligibility checks, or paperwork required.
@@ -127,7 +135,14 @@
     </div>
 
     <div class="how-step">
-      <strong>2. Meet your driver, choose your vehicle</strong>
+      <div class="how-icon">
+        <!-- user -->
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <circle cx="12" cy="8" r="4"/>
+          <path d="M4 20c0-4 4-6 8-6s8 2 8 6"/>
+        </svg>
+      </div>
+      <strong>2. Meet your driver</strong>
       <p>
         Patients are matched with a familiar, trusted driver who understands
         their routine, preferences, and comfort needs.
@@ -135,7 +150,16 @@
     </div>
 
     <div class="how-step">
-      <strong>3. Set it once, just show up</strong>
+      <div class="how-icon">
+        <!-- repeat -->
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <polyline points="17 1 21 5 17 9"/>
+          <path d="M3 11V9a4 4 0 014-4h14"/>
+          <polyline points="7 23 3 19 7 15"/>
+          <path d="M21 13v2a4 4 0 01-4 4H3"/>
+        </svg>
+      </div>
+      <strong>3. Set it once</strong>
       <p>
         We lock in consistent pickup and return times based on your treatment
         schedule — not day-to-day ride requests.
@@ -143,13 +167,29 @@
     </div>
 
     <div class="how-step">
-      <strong>4. Enjoy and smile the way there and back</strong>
+      <div class="how-icon">
+        <!-- smile -->
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <circle cx="12" cy="12" r="10"/>
+          <path d="M8 14s1.5 2 4 2 4-2 4-2"/>
+          <line x1="9" y1="9" x2="9.01" y2="9"/>
+          <line x1="15" y1="9" x2="15.01" y2="9"/>
+        </svg>
+      </div>
+      <strong>4. Just show up</strong>
       <p>
-        Drivers provide calm, patient-first assistance with entry, exit,
-        and any mobility needs — ensuring a smooth, comfortable experience.
+        The same routine, familiar drivers, and predictable timing reduce
+        anxiety and make recurring care feel effortless.
       </p>
-    
+    </div>
+
     <div class="how-step">
+      <div class="how-icon">
+        <!-- check -->
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <polyline points="20 6 9 17 4 12"/>
+        </svg>
+      </div>
       <strong>5. See you again</strong>
       <p>
         Your next ride is already taken care of — no daily coordination,
@@ -158,6 +198,18 @@
     </div>
 
     <div class="how-step">
+      <div class="how-icon">
+        <!-- phone -->
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path d="M22 16.92v3a2 2 0 01-2.18 2
+            19.79 19.79 0 01-8.63-3.07
+            19.5 19.5 0 01-6-6
+            19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3
+            a2 2 0 012 1.72c.12.81.3 1.6.54 2.36a2 2 0 01-.45 2.11L8.09 9.91
+            a16 16 0 006 6l1.72-1.72a2 2 0 012.11-.45
+            c.76.24 1.55.42 2.36.54A2 2 0 0122 16.92z"/>
+        </svg>
+      </div>
       <strong>6. Adjust as care evolves</strong>
       <p>
         If treatment plans change, simply call or email us.
