--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <path d="M4 20c0-4 4-6 8-6s8 2 8 6"/>
         </svg>
       </div>
-      <strong>2. Meet your driver</strong>
+      <strong>2. Meet your driver and vehicle</strong>
       <p>
         Patients are matched with a familiar, trusted driver who understands
         their routine, preferences, and comfort needs.
@@ -176,10 +176,10 @@
           <line x1="15" y1="9" x2="15.01" y2="9"/>
         </svg>
       </div>
-      <strong>4. Just show up</strong>
+      <strong>4. Smile the whole way</strong>
       <p>
         The same routine, familiar drivers, and predictable timing reduce
-        anxiety and make recurring care feel effortless.
+        anxiety and make recurring trips much happier.
       </p>
     </div>
 
