--- a/index.html
+++ b/index.html
@@ -489,11 +489,19 @@
 </section>
 
 <footer class="footer">
-  <div>Care Mobility</div>
-  <div>caremobility247@gmail.com</div>
+  <div class="footer-inner">
+    <div class="footer-brand">
+      <img src="assets/cm-favicon.png" alt="Care Mobility logo" />
+      <span>Care Mobility</span>
+    </div>
+    <div class="footer-contact">
+      caremobility247@gmail.com
+    </div>
+  </div>
+
+  <div class="footer-legal">
+    © 2026 Care Mobility · caremobility247@gmail.com
+  </div>
 </footer>
 
-<script src="https://assets.calendly.com/assets/external/widget.js" async></script>
 
-</body>
-</html>
