--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
 <footer class="site-footer">
     <div class="footer-content">
-        <img src="your-logo.png" alt="Care Mobility Logo" class="footer-logo">
+        <img src="CM-Logo.png" alt="Care Mobility Logo" class="footer-logo">
         
         <div class="footer-info">
             <p><a href="mailto:info@caremobility.com">info@caremobility.com</a></p>
