--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
 
 <footer class="site-footer">
     <div class="footer-content">
-        <img src="CM-Logo.png" alt="Care Mobility Logo" class="footer-logo">
+        <img src="assets/CM-Logo.png" alt="Care Mobility Logo" class="footer-logo">
         
         <div class="footer-info">
-            <p><a href="mailto:info@caremobility.com">info@caremobility.com</a></p>
+            <p><a href="mailto:caremobility247@gmail.com.com">caremobility@gmail.com.com</a></p>
             <p>&copy; <span id="year"></span> Care Mobility. All rights reserved.</p>
         </div>
     </div>
