--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <!-- RIGHT: BRAND IMAGE -->
     <div class="alt-images">
       <img
-        src="assets/CareMobilityDifference.jpg"
+        src="assets/CMDifference.jpg"
         alt="The Care Mobility Difference – Reliable care. Real independence."
       />
     </div>
