--- a/index.html
+++ b/index.html
@@ -321,9 +321,11 @@
   </div>
 </section>
 
+<!-- CARE MOBILITY DIFFERENCE -->
 <section class="alt-module why-narrative">
   <div class="alt-split">
 
+    <!-- LEFT: COPY -->
     <div class="alt-text">
       <h2>Why I started Care Mobility</h2>
 
@@ -359,9 +361,10 @@
       </p>
     </div>
 
+    <!-- RIGHT: BRAND IMAGE -->
     <div class="alt-images">
       <img
-        src="assets/CMDifference.jpg" 
+        src="assets/care-mobility-difference.png"
         alt="The Care Mobility Difference – Reliable care. Real independence."
       />
     </div>
@@ -484,7 +487,7 @@
 
 <footer class="site-footer">
     <div class="footer-content">
-        <img src="assets/CM-Logo.png" alt="Care Mobility Logo" class="footer-logo">
+        <img src="assets/" alt="Care Mobility Logo" class="footer-logo">
         
         <div class="footer-info">
             <p><a href="mailto:caremobility247@gmail.com.com">caremobility@gmail.com.com</a></p>
