--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     <!-- RIGHT: BRAND IMAGE -->
     <div class="alt-images">
       <img
-        src="assets/care-mobility-difference.png"
+        src="assets/CMD-Vertical.png"
         alt="The Care Mobility Difference – Reliable care. Real independence."
       />
     </div>
