--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
     <!-- LEFT: IMAGES -->
     <div class="alt-images">
-      <img src="assets/sedan-assisted-entry.jpg"
+      <img src="assets/wheelchair-transport-van.jpg"
            alt="Driver assisting senior out of vehicle" />
     </div>
 
@@ -364,7 +364,7 @@
     <!-- RIGHT: BRAND IMAGE -->
     <div class="alt-images">
       <img
-        src="assets/CMD-Vertical.png"
+        src="assets/CMDVertical.png"
         alt="The Care Mobility Difference – Reliable care. Real independence."
       />
     </div>
