--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
 <footer class="site-footer">
     <div class="footer-content">
-        <img src="assets/" alt="Care Mobility Logo" class="footer-logo">
+        <img src="assets/CM-Logo.png" class="footer-logo">
         
         <div class="footer-info">
             <p><a href="mailto:caremobility247@gmail.com.com">caremobility@gmail.com.com</a></p>
