--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
     <!-- LEFT: IMAGES -->
     <div class="alt-images">
-      <img src="assets/wheelchair-transport-van.jpg"
+      <img src="assets/WheelchairAccessible.png"
            alt="Driver assisting senior out of vehicle" />
     </div>
 
