--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     <!-- RIGHT: BRAND IMAGE -->
     <div class="alt-images">
       <img
-        src="assets/CMDVertical.png"
+        src="assets/CMDVertical.jpg"
         alt="The Care Mobility Difference – Reliable care. Real independence."
       />
     </div>
@@ -380,7 +380,7 @@
 <section class="faq faq-contrast">
   <div class="faq-inner">
 
-    <h2>Frequently Asked Questions About Care Mobility</h2>
+    <h2 class="section-title-blue">Frequently Asked Questions About Care Mobility</h2>
 
     <div class="faq-list">
 
