--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 <!-- SERVICES -->
 <section class="services">
   <h2>
-    Care Mobility is designed for patients who need the same ride,
-    to the same place, on the same schedule — without the stress of
-    coordinating transportation every time.
+    <strong>Care Mobility is designed for patients</strong> who need the same ride,
+    to the same place, on the same schedule — without the stress of coordinating
+    transportation every time.
   </h2>
-
+  
   <div class="service-grid">
     <div class="service-card">
       <strong>🩺 Dialysis</strong>
