--- a/index.html
+++ b/index.html
@@ -372,6 +372,60 @@
   </div>
 </section>
 
+<section class="who-we-serve">
+  <div class="container">
+    <h2 class="section-title-blue">Who We Serve</h2>
+    <p class="section-intro">
+      Care Mobility addresses unique needs by offloading the cost, stress, and 
+      logistical planning of transportation for your loved ones, customers, and patients.
+    </p>
+
+    <div class="who-grid">
+      <div class="who-card">
+        <h3>If you’re a home-based care provider...</h3>
+        <p>
+          We remove the logistical burden from your team, allowing you to focus 
+          on clinical outcomes rather than ride coordination. By offloading 
+          transportation planning to us, you eliminate the risk of late or 
+          missed appointments that disrupt your patient’s care path.
+        </p>
+      </div>
+
+      <div class="who-card">
+        <h3>If you’re an assisted living center...</h3>
+        <p>
+          Managing medical transport for multiple residents is a massive drain 
+          on staff time and facility resources. Care Mobility simplifies the 
+          process by managing the entire loop—from pickup to return—so your 
+          administrators can focus on facility management and resident well-being.
+        </p>
+      </div>
+
+      <div class="who-card">
+        <h3>If you’re a caring adult child...</h3>
+        <p>
+          Taking time off work or rearranging your day for recurring medical 
+          trips creates significant personal stress. We provide reliable, 
+          door-to-door assistance that gives you peace of mind, knowing your 
+          parent is in familiar hands while you focus on being their child, 
+          not their driver.
+        </p>
+      </div>
+
+      <div class="who-card">
+        <h3>If you’re a specialized healthcare vendor...</h3>
+        <p>
+          (Dialysis, Rehab, Mental Health) Your clinic's efficiency depends on 
+          consistent patient attendance. We partner with you to eliminate the 
+          most common reason for no-shows, ensuring your patients receive 
+          uninterrupted treatment while we handle the high-stress scheduling of 
+          specialized transport.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- ADDED: FAQ ANCHOR TARGET (insert only) -->
 <div id="faq"></div>
 <!-- /ADDED -->
