--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
 
 <header class="header">
   <div class="header-left">
-    <img src="assets/cm-favicon.png" class="logo" alt="Care Mobility logo" />
+    <img
+      src="assets/CM-Logo.png"
+      alt="Care Mobility logo"
+      class="logo"
+    />
     <div>
       <div class="brand">Care Mobility</div>
       <div class="tagline">Getting you there every day</div>
     </div>
   </div>
-  <div class="header-right">caremobility247@gmail.com</div>
+
+  <div class="header-right">
+    <a href="mailto:caremobility247@gmail.com">
+      caremobility247@gmail.com
+    </a>
+  </div>
 </header>
+
 
 <!-- HERO -->
 <section class="hero">
@@ -372,56 +382,65 @@
   </div>
 </section>
 
-<section class="who-we-serve">
+<!-- WHO CARE MOBILITY IS FOR -->
+<section class="section section-soft">
   <div class="container">
-    <h2 class="section-title-blue">Who We Serve</h2>
-    <p class="section-intro">
-      Care Mobility addresses unique needs by offloading the cost, stress, and 
-      logistical planning of transportation for your loved ones, customers, and patients.
+
+    <h2 class="section-title-blue">Who Care Mobility Is For</h2>
+    <p class="how-subhead">
+      Care Mobility is designed for patients and care teams who rely on consistent,
+      dependable transportation — without the administrative burden.
     </p>
 
-    <div class="who-grid">
-      <div class="who-card">
-        <h3>If you’re a home-based care provider...</h3>
-        <p>
-          We remove the logistical burden from your team, allowing you to focus 
-          on clinical outcomes rather than ride coordination. By offloading 
-          transportation planning to us, you eliminate the risk of late or 
-          missed appointments that disrupt your patient’s care path.
-        </p>
+    <div class="grid grid-3">
+
+      <!-- Home-based care providers -->
+      <div class="card">
+        <strong>If you’re a home-based care provider</strong>
+        <ul style="padding-left: 18px;">
+          <li>Remove transportation logistics from your care team’s workload</li>
+          <li>Eliminate late or missed appointments that disrupt care plans</li>
+          <li>Keep staff focused on clinical outcomes, not ride coordination</li>
+          <li>Ensure patients arrive consistently and on time</li>
+        </ul>
       </div>
 
-      <div class="who-card">
-        <h3>If you’re an assisted living center...</h3>
-        <p>
-          Managing medical transport for multiple residents is a massive drain 
-          on staff time and facility resources. Care Mobility simplifies the 
-          process by managing the entire loop—from pickup to return—so your 
-          administrators can focus on facility management and resident well-being.
-        </p>
+      <!-- Assisted living centers -->
+      <div class="card">
+        <strong>If you’re an assisted living center</strong>
+        <ul style="padding-left: 18px;">
+          <li>Reduce staff time spent coordinating resident transportation</li>
+          <li>Simplify recurring medical trips for multiple residents</li>
+          <li>Manage the full loop from pickup to return</li>
+          <li>Free administrators to focus on operations and resident care</li>
+        </ul>
       </div>
 
-      <div class="who-card">
-        <h3>If you’re a caring adult child...</h3>
-        <p>
-          Taking time off work or rearranging your day for recurring medical 
-          trips creates significant personal stress. We provide reliable, 
-          door-to-door assistance that gives you peace of mind, knowing your 
-          parent is in familiar hands while you focus on being their child, 
-          not their driver.
-        </p>
+      <!-- Adult children -->
+      <div class="card">
+        <strong>If you’re a caring adult child</strong>
+        <ul style="padding-left: 18px;">
+          <li>Avoid taking time off work for recurring appointments</li>
+          <li>Eliminate the stress of rearranging your day around rides</li>
+          <li>Know your parent is supported door to door</li>
+          <li>Focus on being their child, not their driver</li>
+        </ul>
       </div>
 
-      <div class="who-card">
-        <h3>If you’re a specialized healthcare vendor...</h3>
-        <p>
-          (Dialysis, Rehab, Mental Health) Your clinic's efficiency depends on 
-          consistent patient attendance. We partner with you to eliminate the 
-          most common reason for no-shows, ensuring your patients receive 
-          uninterrupted treatment while we handle the high-stress scheduling of 
-          specialized transport.
+      <!-- Healthcare providers -->
+      <div class="card">
+        <strong>If you’re a specialized healthcare provider</strong>
+        <p class="text-muted" style="margin-bottom: 10px;">
+          Dialysis, rehab, mental health, infusion therapy
         </p>
+        <ul style="padding-left: 18px;">
+          <li>Reduce no-shows caused by unreliable transportation</li>
+          <li>Improve patient attendance and treatment continuity</li>
+          <li>Offload high-stress scheduling and transport coordination</li>
+          <li>Keep clinics running efficiently with predictable arrivals</li>
+        </ul>
       </div>
+
     </div>
   </div>
 </section>
